PSARC/2004/199 intrd: Dynamic Interrupt Distribution 5017144 Interrupt distribution can overload CPUs

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -193,6 +193,7 @@ COMMON_SUBDIRS=		\
 	init		\
 	initpkg		\
 	install.d	\
+	intrd		\
 	intrstat	\
 	ipcrm		\
 	ipcs		\
@@ -730,6 +731,7 @@ MANIFEST_TOPDIRS=			\
 	dumpadm				\
 	eeprom				\
 	fm				\
+	intrd				\
 	ipf				\
 	keyserv				\
 	ldapcachemgr			\
