6271945 openssl and cw don't get along

--- a/usr/src/lib/openssl/Makefile.openssl
+++ b/usr/src/lib/openssl/Makefile.openssl
@@ -83,3 +83,4 @@ OPENSSL_LDFLAGS +=	-L$(PARENT_ROOT)$(SFWLIBDIR)
 OPENSSL_LDFLAGS +=	-L$(SFWLIBDIR)
 
 OPENSSL_DYNFLAGS =	-R $(SFWLIBDIR)
+$(__GNUC)CFLAGS += -_gcc=-fasm
