6256357 Ontario platform support should be delivered via ontario specific pacakges 6278450 Add platform specific platmod for ontario to provide workaround of SouthBridge chip defect 6297432 platform links needed for SUNW,Sun-Fire-T1000

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -34,6 +34,7 @@ sparc_SUBDIRS= \
 	SUNWcakr.v \
 	SUNWcar.u  \
 	SUNWcar.v  \
+	SUNWcart200.v \
 	SUNWcg6.u \
 	SUNWcg6h  \
 	SUNWcpc.u \
@@ -65,6 +66,7 @@ sparc_SUBDIRS= \
 	SUNWkvm.m  \
 	SUNWkvm.u  \
 	SUNWkvm.v  \
+	SUNWkvmt200.v \
 	SUNWluxd.u \
 	SUNWluxl \
 	SUNWonmtst \
