PSARC/2005/402 volfs(7FS) service 6178604 vold legacy init.d/volmgt startup should go away

--- a/usr/src/cmd/volmgt/etc/Makefile
+++ b/usr/src/cmd/volmgt/etc/Makefile
@@ -19,9 +19,10 @@
 #
 # CDDL HEADER END
 #
-# Copyright 1992, Sun Microsystems
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
-# Makefile for volume management files that go in /etc
+# Makefile for volume management files that go in /etc and /var/svc
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
@@ -31,26 +32,34 @@ include ../../Makefile.cmd
 
 ETCFILES=	vold.conf rmmount.conf
 
-ROOTETCFILES=	${ETCFILES:%=${ROOTETC}/%}
+ROOTETCFILES=	$(ETCFILES:%=$(ROOTETC)/%)
 
 #
 # For some reason I have to set these modes explicitly otherwise
 # they end up executable.
 #
-${ROOTETC}/vold.conf := FILEMODE = 0444
-${ROOTETC}/rmmount.conf := FILEMODE = 0444
-${ROOTETC}/vold.conf := OWNER = root
-${ROOTETC}/rmmount.conf := OWNER = root
+$(ROOTETC)/vold.conf := FILEMODE = 0444
+$(ROOTETC)/rmmount.conf := FILEMODE = 0444
+$(ROOTETC)/vold.conf := OWNER = root
+$(ROOTETC)/rmmount.conf := OWNER = root
+
+MANIFEST = 		volfs.xml
+ROOTMANIFESTDIR = 	$(ROOTSVCSYSTEMFILESYSTEM)
+ROOTMETHOD= 		$(ROOTLIBSVCMETHOD)/svc-volfs
+$(ROOTMANIFEST) := 	FILEMODE = 0444
+$(ROOTLIBSVCMETHOD)/svc-volfs := FILEMODE=555
 
 .KEEP_STATE:
 
-all: ${ETCFILES} 
+all: $(ETCFILES)
 
 lint:
 
 cstyle:
 
-install: all ${ROOTETCFILES} 
+install: all $(ROOTETCFILES) $(ROOTMANIFEST) $(ROOTMETHOD)
+
+check: $(CHKMANIFEST)
 
 clean:     
 
