PSARC/2005/413 sun4v optimized MD5 and arcfour kernel cryptographic modules 6278572 port Spracklen's fast MD5 on Niagara to solaris 6278578 port Spracklen's fast RC4 on Niagara to solaris

--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -151,3 +151,10 @@ ASSYM_DEPS	+= mach_subr_asm.o swtch.o
 ASSYM_DEPS	+= mach_interrupt.o mach_xc.o
 ASSYM_DEPS	+= trap_table.o wbuf.o
 ASSYM_DEPS	+= mach_sfmmu_asm.o sfmmu_asm.o
+
+#
+#			kernel cryptographic framework
+#
+
+ARCFOUR_OBJS	+= arcfour.o arcfour_crypt.o
+
