6240456 Need topo enumeration for PCI Express 6244989 libtopo looks in the wrong place for driver modules on amd64

--- a/usr/src/cmd/fm/topo/plugins/Makefile.plugin
+++ b/usr/src/cmd/fm/topo/plugins/Makefile.plugin
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -82,7 +82,7 @@ clean:
 	$(RM) $(OBJS) $(LINTFILES)
 
 clobber: clean
-	$(RM) $(PROG)
+	$(RM) $(PROG) $(ROOTTOPO) $(ROOTPROG) 
 
 %.ln: %.c
 	$(LINT.c) -c $<
