6302020 Fix lint errors caused by 6278578 6302024 Fix hardcoded version number in MD5's  modlcrypto introduced by 6278572

--- a/usr/src/uts/sun4v/arcfour/Makefile
+++ b/usr/src/uts/sun4v/arcfour/Makefile
@@ -75,8 +75,8 @@ CFLAGS += -dalign
 #
 # For niagara specific optimizations
 #
-CPPFLAGS	+= -fast -xarch=v9a
-COPTIMIZE	= -fast
+COPTIMIZE	= -xO5 -xbuiltin=%all
+
 #
 # Override the default -xspace setting
 #
