PSARC 2005/429 Ontario Event Transport Module 6279063 ETM support for sun4v/Ontario (umbrella bug)

--- a/usr/src/cmd/fm/modules/sun4v/Makefile
+++ b/usr/src/cmd/fm/modules/sun4v/Makefile
@@ -25,9 +25,6 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-sparc_SUBDIRS = sun4u sun4v
-i386_SUBDIRS =
+SUBDIRS = etm
 
-SUBDIRS = common $($(MACH)_SUBDIRS)
-
-include ../Makefile.subdirs
+include ../../Makefile.subdirs
