--- a/usr/src/cmd/fm/modules/sun4v/etm/etm.conf
+++ b/usr/src/cmd/fm/modules/sun4v/etm/etm.conf
@@ -25,9 +25,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-sparc_SUBDIRS = sun4u sun4v
-i386_SUBDIRS =
+# transport these FMA events from the domain to the SP
 
-SUBDIRS = common $($(MACH)_SUBDIRS)
+subscribe fault.*
 
-include ../Makefile.subdirs
