6275414 unary operator * doesn't work properly when applied to args[] elements 6282291 D compiler core dumps in dt_node_dynamic() for inline parameter 6295808 dtrace could warn about /* w/i a comment 6301080 dtrace debugging support should be easier to maintain 6301082 mdb should provide raw target support for DOF 6301083 dt_probe_discover() fails assertion when matching unpublished provider 6301084 Pscantext() leaks prmap_t buffer every time it is called 6301086 dtrace(1M) should always dtrace_close() before returning 6301087 dtrace_close() deadlock in dt_proc_destroy() when processes are idle 6301088 dtrace_program_link() leaks ELF handles for object files 6301091 D compiler support for USDT translators (part 2)

--- a/usr/src/cmd/mdb/Makefile.common
+++ b/usr/src/cmd/mdb/Makefile.common
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,13 +29,14 @@
 # subdirectory will need to build.
 # 
 COMMON_MODULES_PROC = \
-	mdb_ds \
-	mdb_test \
+	dof \
 	libc \
 	libnvpair \
 	libsysevent \
 	libumem \
-	libuutil
+	libuutil \
+	mdb_ds \
+	mdb_test
 
 #
 # MDB modules used for debugging user processes which are only 32-bit
