PSARC 2005/365 Nemo drivers interface simplification 6246540 race condition between aggr driver detach and create-aggr 6253542 dld breaks autopush, PPPoE, ipfilter for bge and xge 6261226 Nemo should use modhash 6272908 in.rarpd no longer works for GLDv3 interfaces 6303082 ill_tx fastpath lacks flow control

--- a/usr/src/cmd/dladm/Makefile
+++ b/usr/src/cmd/dladm/Makefile
@@ -29,7 +29,7 @@
 PROG= dladm
 
 ROOTFS_PROG= $(PROG)
-CONFIGFILES= datalink.conf aggregation.conf
+CONFIGFILES= aggregation.conf
 
 POFILE= $(PROG).po
 
