6301218 Matlab dumps core on startup when running on 112963-22

--- a/usr/src/cmd/sgs/Makefile
+++ b/usr/src/cmd/sgs/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -179,7 +179,7 @@ FRC:
 # and tweak the file globs slightly.
 #
 XRPRUNE=	rtld.4.x spec packages abi
-XRADD=		*.msg mapfile*
+XRADD=		*.msg mapfile* llib-[a-z]*
 XRDEL=		Makefile* kobj_*
 
 #
