6273858 gcc and sgs/error don't get along 6273865 gcc and sgs/m4 don't get along 6273869 gcc and sgs/unifdef don't get along

--- a/usr/src/cmd/sgs/error/i386/Makefile
+++ b/usr/src/cmd/sgs/error/i386/Makefile
@@ -22,7 +22,8 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1993 by Sun Microsystems, Inc.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 # cmd/sgs/error/i386/Makefile
 
@@ -38,6 +39,8 @@ SRCS=		$(OBJS:%.o=../common/%.c)
 INCLIST=	-I../common
 DEFLIST=	-DELF
 CPPFLAGS=	$(INCLIST) $(DEFLIST) $(CPPFLAGS.master)
+CFLAGS +=	$(CCVERBOSE)
+C99MODE=	$(C99_ENABLE)
 
 CLEANFILES +=	$(LINTOUT)
 
