--- a/usr/src/cmd/sgs/unifdef/sparc/Makefile
+++ b/usr/src/cmd/sgs/unifdef/sparc/Makefile
@@ -22,7 +22,8 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1993 by Sun Microsystems, Inc.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 # cmd/sgs/unifdef/sparc/Makefile
 #
@@ -37,7 +38,8 @@ SRCS=		$(OBJS:%.o=../common/%.c)
 
 DEFLIST=	-DELF_OBJ -DELF
 CPPFLAGS=	$(INCLIST) $(DEFLIST) $(CPPFLAGS.master)
-
+CFLAGS +=	$(CCVERBOSE)
+C99MODE=	$(C99_ENABLE)
 LINTFLAGS +=	$(LDLIBS)
 
 CLEANFILES +=	$(LINTOUT)
