6302130 disk pm changes for R0B2 motherboard

--- a/usr/src/uts/sun4u/chicago/io/ppm.conf
+++ b/usr/src/uts/sun4u/chicago/io/ppm.conf
@@ -100,7 +100,7 @@ domain_cpu-control=
 # delay -- minimum delay between FET off and FET on
 # post_delay -- delay after turning on/off the FET
 #
-domain_diskfet-devices = "/pci@1e,600000/pci@0/pci@a/pci@0/LSILogic,sas@1";
+domain_diskfet-devices = "/pci@1e,600000/pci@0/pci@9/pci@0/scsi@1";
 domain_diskfet-model = "FET";
 domain_diskfet-control =
     "cmd=FET_ON path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x0f val=0x0f post_delay=1500000",
