6253548 Backout Niagara workarounds 6301419 occasionally an idle CPU may suspend while there are runnable threads 6300289 Niagara virtual address space not fully utilizable

--- a/usr/src/uts/sun4v/Makefile.workarounds
+++ b/usr/src/uts/sun4v/Makefile.workarounds
@@ -34,5 +34,4 @@
 
 WORKAROUND_DEFS =
 WORKAROUND_DEFS	+= -DQCN_POLLING		# XXXQ
-WORKAROUND_DEFS	+= -DNIAGARA_ERRATUM_39		# XXXQ
-WORKAROUND_DEFS	+= -DNIAGARA_ERRATUM_42		# XXXQ
+WORKAROUND_DEFS	+= -DNIAGARA_CHK_VERSION	# XXXQ
