6273535 SUNWgrub* packages have incorrect pkginfo(4) settings 6305469 READ_FAIL_STAGE2 in installgrub/message.h contains wrong message 6305481  installgrub miscounts stage2 size in sector by 1 if stage2 size is multiple of 512 6307439 make clobber in usr/src/grub and usr/src/psm/stand/bootblks/ufs/i386 deletes files in proto 6307553 installgrub's output need to be syntax correct

--- a/usr/src/grub/Makefile
+++ b/usr/src/grub/Makefile
@@ -42,9 +42,6 @@ $(ROOT_BOOT_GRUB):
 	$(INS.dir)
 
 
-clean: $(SUBDIRS)
-
-clobber: $(SUBDIRS)
-	$(RM) $(INST_TARGETS)
+clean clobber: $(SUBDIRS)
 
 FRC:
