--- a/usr/src/grub/grub-0.95/grub/Makefile.solaris
+++ b/usr/src/grub/grub-0.95/grub/Makefile.solaris
@@ -62,9 +62,9 @@ $(INSTALL_DIR) $(SRC_DIR):
 
 
 clean: _FORCE
-	$(RM) *.o $(PROGRAMS)
+	$(RM) *.o
 
 clobber: clean
-	$(RM) $(INSTALL_TARGETS)
+	$(RM) $(PROGRAMS)
 
 _FORCE:
