--- a/usr/src/grub/grub-0.95/stage2/Makefile.solaris
+++ b/usr/src/grub/grub-0.95/stage2/Makefile.solaris
@@ -868,9 +868,9 @@ $(ROOT_BOOT_GRUB) $(SRC_DIR):
 
 
 clean: _FORCE
-	$(RM) *.o $(BUILT_SOURCES) $(LIBRARIES) $(PROGRAMS) $(DATA)
+	$(RM) *.o $(BUILT_SOURCES) $(LIBRARIES) $(PROGRAMS) $(NOINSTALL_DATA)
 
 clobber: clean
-	$(RM) $(INSTALL_TARGETS)
+	$(RM) $(INSTALL_DATA)
 
 _FORCE:
